=feat udistrital/arka_cliente#763: Funcionalidad para consultar acta sin elementos. Swagger
