# controllers/transaccion_acta_recibido.go
@@ -22,13 +22,19 @@ func (c *TransaccionActaRecibidoController) URLMapping() {
 // @Title Get All By id
 // @Description get TransaccionActaRecibidoController
 // @Param	id		path 	string	true		"id"
+// @Param	elementos	query	bool	false	"Traer elementos asociados al acta"
 // @Success 200 {object} models.TransaccionActaRecibidoController
 // @Failure 404 not found resource
 // @router /:id [get]
 func (c *TransaccionActaRecibidoController) GetAllById() {
+	elementos := true
+	if v, err := c.GetBool("elementos"); err == nil {
+		elementos = v
+	}
 	idPersonaStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idPersonaStr)
-	l, err := models.GetTransaccionActaRecibido(id)
+
+	l, err := models.GetTransaccionActaRecibido(id, elementos)
 	if err != nil {
 		logs.Error(err)
 		//c.Data["development"] = map[string]interface{}{"Code": "000", "Body": err.Error(), "Type": "error"}
