# swagger/swagger.yml
@@ -701,121 +701,6 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
-  /tipo_bien/:
-    get:
-      tags:
-      - tipo_bien
-      description: get TipoBien
-      operationId: TipoBienController.Get All
-      parameters:
-      - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
-        name: limit
-        description: Limit the size of result set. Must be an integer
-        type: string
-      - in: query
-        name: offset
-        description: Start position of result set. Must be an integer
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.TipoBien'
-        "404":
-          description: not found resource
-    post:
-      tags:
-      - tipo_bien
-      description: create TipoBien
-      operationId: TipoBienController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for TipoBien content
-        required: true
-        schema:
-          $ref: '#/definitions/models.TipoBien'
-      responses:
-        "201":
-          description: '{int} models.TipoBien'
-        "400":
-          description: the request contains incorrect syntax
-  /tipo_bien/{id}:
-    get:
-      tags:
-      - tipo_bien
-      description: get TipoBien by id
-      operationId: TipoBienController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.TipoBien'
-        "404":
-          description: not found resource
-    put:
-      tags:
-      - tipo_bien
-      description: update the TipoBien
-      operationId: TipoBienController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for TipoBien content
-        required: true
-        schema:
-          $ref: '#/definitions/models.TipoBien'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.TipoBien'
-        "400":
-          description: the request contains incorrect syntax
-    delete:
-      tags:
-      - tipo_bien
-      description: delete the TipoBien
-      operationId: TipoBienController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "404":
-          description: not found resource
   /transaccion_acta_recibido/:
     post:
       tags:
@@ -846,6 +731,10 @@ paths:
         description: id
         required: true
         type: string
+      - in: query
+        name: elementos
+        description: Traer elementos asociados al acta
+        type: boolean
       responses:
         "200":
           description: ""
@@ -878,10 +767,10 @@ paths:
         "400":
           description: the request contains incorrect syntax
 definitions:
-  36834.<nil>.SoporteActa:
+  32392.<nil>.SoporteActa:
     title: SoporteActa
     type: object
-  36863.<nil>.Elemento:
+  32421.<nil>.Elemento:
     title: Elemento
     type: object
   models.ActaRecibido:
@@ -946,8 +835,6 @@ definitions:
       Subtotal:
         type: number
         format: double
-      TipoBienId:
-        $ref: '#/definitions/models.TipoBien'
       UnidadMedida:
         type: integer
         format: int64
@@ -1093,30 +980,6 @@ definitions:
         format: int64
       Nombre:
         type: string
-  models.TipoBien:
-    title: TipoBien
-    type: object
-    properties:
-      Activo:
-        type: boolean
-      CodigoAbreviacion:
-        type: string
-      Descripcion:
-        type: string
-      FechaCreacion:
-        type: string
-        format: datetime
-      FechaModificacion:
-        type: string
-        format: datetime
-      Id:
-        type: integer
-        format: int64
-      Nombre:
-        type: string
-      NumeroOrden:
-        type: number
-        format: double
   models.TransaccionActaRecibido:
     title: TransaccionActaRecibido
     type: object
@@ -1124,9 +987,9 @@ definitions:
       ActaRecibido:
         $ref: '#/definitions/models.ActaRecibido'
       Elementos:
-        $ref: '#/definitions/36863.<nil>.Elemento'
+        $ref: '#/definitions/32421.<nil>.Elemento'
       SoportesActa:
-        $ref: '#/definitions/36834.<nil>.SoporteActa'
+        $ref: '#/definitions/32392.<nil>.SoporteActa'
       UltimoEstado:
         $ref: '#/definitions/models.HistoricoActa'
   models.TransaccionActaRecibidoController:
@@ -1139,9 +1002,6 @@ tags:
 - name: soporte_acta
   description: |
     SoporteActaController operations for SoporteActa
-- name: tipo_bien
-  description: |
-    TipoBienController operations for TipoBien
 - name: elemento
   description: |
     ElementoController operations for Elemento
